--- a/Pet Care Assistant/Pet Care Assistant.csproj
+++ b/Pet Care Assistant/Pet Care Assistant.csproj
@@ -80,6 +80,12 @@
 	  <MauiXaml Update="Views\AboutUsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="Views\AppointmentFormPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	  <MauiXaml Update="Views\AppointmentListPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="Views\HealthCheckerPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
