Fixed images bug - works on both windows and android

--- a/Pet Care Assistant/Pet Care Assistant.csproj
+++ b/Pet Care Assistant/Pet Care Assistant.csproj
@@ -60,6 +60,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\dog1.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <MauiImage Include="Images\dog1.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
 		<PackageReference Include="Microcharts.Maui" Version="1.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
